--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "brcypt": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "@apollo/server": "^4.10.4",
+    "graphql": "^16.9.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.0.0"
@@ -25,7 +28,6 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.8",
-    "dotenv": "^16.4.5",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5"
   }
