made changes to middleware to implement apollo

--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
-    "render-build":"npm install && npm run build"
+    "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "concurrently": "^8.2.0",
-     "wait-on": "^7.2.0"
+    "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "@apollo/server": "^4.11.2",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5"
   }
 }
